# cpp-tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  MyInclude.props  README.md  TOpenMP.cpp  TOpenMP.h  cpptools.props  vcpkg.json
cmake/dependencies/: sdl.cmake
cmake/dependencies/ffmpeg/: cpptools_enable_ffmpeg.cmake  cpptools_resolve_ffmpeg.cmake  ffmpeg.cmake
cmake/dependencies/sdl/sdl2/: cpptools_enable_sdl2.cmake  cpptools_resolve_sdl2.cmake  export_sdl2_props.cmake  sdl2.cmake
cmake/dependencies/sdl/sdl3/: cpptools_enable_sdl3.cmake  cpptools_resolve_sdl3.cmake  sdl3.cmake
cmake/msvs/: cpptools_export_binary_root_props.cmake
docs/chs/: architecture.md  math.md
include/cpptools/: framework.hpp
include/cpptools/core/: traits.hpp
include/cpptools/core/traits/: array_traits.h  container_traits.h  traits.hpp
include/cpptools/framework/: copy.hpp  ffmpeg.hpp  filler.hpp  framework.hpp  math.hpp  openmp.h  print.h  print.hpp  sdl.hpp
include/cpptools/framework/benchmark/backend/openmp/: measure_duration.h
include/cpptools/framework/copy/: backend.hpp  copy.hpp
include/cpptools/framework/copy/backend/: backend.hpp  serial.hpp
include/cpptools/framework/copy/backend/serial/: copying.h  serial.hpp
include/cpptools/framework/ffmpeg/: backend.hpp  ffmpeg.hpp
include/cpptools/framework/ffmpeg/backend/: backend.hpp  serial.hpp
include/cpptools/framework/ffmpeg/backend/serial/: CodecContext_init.h  FormatContext_init.h  SwrContext_Init.h  serial.hpp
include/cpptools/framework/filler/: backend.hpp  filler.hpp
include/cpptools/framework/filler/backend/: backend.hpp  serial.hpp
include/cpptools/framework/filler/backend/serial/: fill_zero.h  serial.hpp
include/cpptools/framework/math/: backend.hpp  math.hpp
include/cpptools/framework/math/backend/: backend.hpp  openmp.hpp  serial.hpp
include/cpptools/framework/math/backend/openmp/: QRDecomposition.h  decomposition_qr_mgs.h  get_dot.h  get_sum.h  multiply_matrix_vector.h  openmp.hpp  solve_linear_by_decomposition_qr_mgs.h  upper_triangular_back_substitution.h
include/cpptools/framework/math/backend/serial/: QRDecomposition.h  decomposition_qr_mgs.h  get_dot.h  get_frobenius_norm_distance.h  get_multiply_matrix_vector.h  get_sum.h  multiply_matrix.h  multiply_matrix_vector.h  serial.hpp  solve_linear_by_decomposition_qr_mgs.h  transpose.h  upper_triangular_back_substitution.h
include/cpptools/framework/openmp/: CMakeLists.txt  TOpenMP.h  openmp.h  openmp_filler.h  update-openmp-header.ps1
include/cpptools/framework/print/: CMakeLists.txt  backend.hpp  fun_print.h  print.h  print.hpp  printing.h  update-print-header.ps1
include/cpptools/framework/print/backend/: backend.hpp  serial.hpp
include/cpptools/framework/print/backend/serial/: print_2d.h  printing.h  serial.hpp
include/cpptools/framework/sdl/: backend.hpp  sdl.hpp
include/cpptools/framework/sdl/backend/: backend.hpp  serial.hpp
include/cpptools/framework/sdl/backend/serial/: create_window_and_renderer.h  serial.hpp
include/cpptools/framework/utils/: measureDuration.h
msvs/: cpptools.props  cpptools.targets
msvs/modules/: openmp.props  sdl.props
msvs/modules/ffmpeg/: ffmpeg.props
msvs/modules/sdl/sdl2/: sdl2.props  sdl2_auto.props  sdl2_cmake.props  sdl2_system.props  sdl2_vcpkg.props
msvs/modules/sdl/sdl3/: sdl3_cmake.props
src/framework/ffmpeg/backend/serial/: CodecContext_init.cpp  FormatContext_init.cpp  SwrContext_Init.cpp
src/framework/openmp/: TOpenMP.cpp
src/framework/sdl/backend/serial/: create_window_and_renderer.cpp
